--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <title>Prototype Web</title>
 </head>
-</head>
 <body>
   <div>
         <div>
@@ -12,11 +11,20 @@
                 <div>
                     <div>
                         <div><img class="img-responsive" src="https://images-na.ssl-images-amazon.com/images/I/81u83S4BFAL.jpg" alt="man of steel"></div>
+                        <div><img class="img-responsive" src="https://images-na.ssl-images-amazon.com/images/I/81r6-NNy3dL._SL1500_.jpg" alt="wonder woman"></div>
+                        <div><img class="img-responsive" src="https://s2.thingpic.com/images/HF/gCzb1jf8i7WYnzzu8JQcLtCX.jpeg" alt="the dark knight"></div>
+                        <div><img class="img-responsive" src="https://i.pinimg.com/originals/e1/5a/bb/e15abb6c10bafb709b812b09b77d5533.jpg" alt="aquaman"></div>
+                        <div><img class="img-responsive" src="https://movieplayer.net-cdn.it/t/images/2019/10/31/joker-oscar-2020_jiPrPyA_jpg_960x0_crop_q85.jpg" alt="joker"></div>
+                        <div><img class="img-responsive" src="https://i.pinimg.com/originals/be/25/71/be2571c4dc4688f8977676ea7ff99b03.jpg" alt="Thor ragnarok"></div>
                     </div>
                 </div>
                 <div>
                     <div>
                         <div><img class="img-responsive" src="https://3.bp.blogspot.com/-Q5LBjgx52Pw/U8S__g7mKdI/AAAAAAABBE8/rMF7gLsxqRo/s1600/0-terminator-poster-trivia.jpg" alt="terminator"></div>
+                        <div><img class="img-responsive" src="https://i.pinimg.com/originals/bb/fc/c6/bbfcc6163ffb492ce52b3f9f505e1ec9.jpg" alt="predator"></div>
+                        <div><img class="img-responsive" src="https://i.pinimg.com/originals/64/03/dc/6403dcb5d8892765ea596e92508cc767.jpg" alt="alien covenant"></div>
+                        <div><img class="img-responsive" src="https://66.media.tumblr.com/d01a04c4a95f6595ba34d2c1d014af6a/4d54b9d4960e5288-9c/s540x810/c5af5d1e4ed975ede1fffbd15ba79efea47e1bc6.png" alt="star wars"></div>
+                        <div><img class="img-responsive" src="https://i.pinimg.com/originals/2b/80/84/2b808441369cc5304c1489179f2c9e78.jpg" alt="the incredible hulk"></div>
                         </div>
                     </div>
                 </div>
